--- a/germany/templates/search.html
+++ b/germany/templates/search.html
@@ -1,63 +1,22 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
     <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-
-        <title>Hello, world!</title>
-        <style>
-            /* Styles for wrapping the search box */
-            .main {
-                width: 50%;
-                margin: 50px auto;
-            }
-
-            /* Bootstrap 4 text input with search icon */
-
-            .has-search .form-control {
-                padding-left: 2.375rem;
-            }
-
-            .has-search .form-control-feedback {
-                position: absolute;
-                z-index: 2;
-                display: block;
-                width: 2.375rem;
-                height: 2.375rem;
-                line-height: 2.375rem;
-                text-align: center;
-                pointer-events: none;
-                color: #aaa;
-            }
-
-            .starter-template {
-                padding: 1rem 1.5rem;
-                text-align: center;
-            }
-        </style>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>Google Powered Site Search | Tutorialzine Demo</title>
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/search.css') }}">
     </head>
     <body>
-        <div class="main">
-            <div class="starter-template">
-                <h1>Search the JSON Contents</h1>
-                <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-            </div>
-            <!-- Another variation with a button -->
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search this blog">
-                <div class="input-group-append">
-                <button class="btn btn-secondary" type="button">
-                    <i class="fa fa-search"></i>
-                </button>
+        <div class="container">
+            <h1>Fancy Search Box</h1>
+            <h2>Try below!</h2>
+            <div class="searchInput">
+                <input type="text" placeholder="what's in your mind...">
+                <div class="resultBox">
+                    <!-- here list are inserted from javascript -->
                 </div>
+                <div class="icon"><i class="fas fa-search"></i></div>
             </div>
         </div>
+        <script src="{{ url_for('static', filename='scripts/search.js') }}"></script>
     </body>
 </html>
-
-
-
