--- a/germany/static/styles/search.css
+++ b/germany/static/styles/search.css
@@ -30,8 +30,8 @@ h2 {
 }
 
 .container{
-  max-width: 600px;
-  margin: 150px auto;
+  max-width: 730px;
+  margin: 80px auto;
 }
 
 .container .searchInput{
@@ -98,4 +98,45 @@ h2 {
   font-size: 20px;
   color: #644bff;
   cursor: pointer;
+}
+
+.table-hide {
+    display: none;
+}
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 80px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
 }
