--- a/germany/templates/search.html
+++ b/germany/templates/search.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Google Powered Site Search | Tutorialzine Demo</title>
+        <title>JSON Site Search</title>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/search.css') }}">
     </head>
     <body>
@@ -15,6 +15,22 @@
                     <!-- here list are inserted from javascript -->
                 </div>
                 <div class="icon"><i class="fas fa-search"></i></div>
+            </div>
+
+            <div class="search-result">
+                <table id="search-table" class="styled-table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Found In</th>
+                            <th>Version Number</th>
+                            <th>Access Status</th>
+                            <th>Status Level</th>
+                            <th>Process Control</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
         </div>
         <script src="{{ url_for('static', filename='scripts/search.js') }}"></script>
